fixed iphone not showing selected weapons svg

--- a/assets/css/rockpaperscissors.css
+++ b/assets/css/rockpaperscissors.css
@@ -42,15 +42,16 @@ main {
 }
 
 .selectedWeapon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 8rem;
   height: 8rem;
 }
 
 .placeholder {
   font-size: 2rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .weapons {
